--- a/game/package.json
+++ b/game/package.json
@@ -20,6 +20,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.52.1",
     "seamless-immutable": "^7.1.4",
+    "socket.io-client": "^4.5.1",
     "typescript": "^4.4.2",
     "typescript-plugin-css-modules": "^3.4.0",
     "web-vitals": "^2.1.0"
