--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
+    "compileAndRun": "clear && tsc && node build/index.js -o --watch",
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -e ts -w ./src -x yarn compileAndRun",
+    "watch:serve": "ts-node --inspect src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "nodemon": "^2.0.16",
     "socket.io": "^4.5.1"
   }
 }
