--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,15 +13,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "shared": "1.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "shared": "1.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
+    "esm": "^3.2.25",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
+    "shared": "1.0.0",
     "socket.io": "^4.5.1"
   }
 }
