--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -11,7 +11,11 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
   },
   "watchOptions": {
     "watchFile": "useFsEvents",
