--- a/packages/game/package.json
+++ b/packages/game/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "shared": "1.0.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -14,6 +13,8 @@
     "@types/react-dom": "^18.0.0",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
@@ -21,6 +22,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.52.1",
     "seamless-immutable": "^7.1.4",
+    "shared": "1.0.0",
     "socket.io-client": "^4.5.1",
     "typescript": "^4.4.2",
     "typescript-plugin-css-modules": "^3.4.0",
