--- a/packages/game/package.json
+++ b/packages/game/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/core": "^9.4.5",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -18,6 +19,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.4.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.52.1",
