--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
     "shared": "1.0.0",
     "typescript": "^4.7.4"
   },
@@ -20,9 +23,13 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "esm": "^3.2.25",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1",
     "shared": "1.0.0",
     "socket.io": "^4.5.1"
   }
