--- a/packages/game/tsconfig.json
+++ b/packages/game/tsconfig.json
@@ -21,6 +21,9 @@
     "jsx": "react-jsx",
     "baseUrl": "./src",
     "paths": {
+      "assets/*": [
+        "assets/*"
+      ],
       "models/*": [
         "models/*"
       ],
